fix links around wrapup buttons

--- a/client/src/upload/UploadProgress.css
+++ b/client/src/upload/UploadProgress.css
@@ -62,14 +62,22 @@
 }
 
 #wrapup-buttons {
-    width: 600px;
+    width: 640px;
     display: flex;
 }
 
-.wrapup-button {
+.wrapup-button-link {
     width: 300px;
     height: 50px;
     margin: 10px;
+
+    border: none;
+    border-radius: 8px;
+}
+
+.wrapup-button {
+    height: 101%;
+    width: 101%;
     color: black;
     
     font-size: 26px;
